--- a/css/pjw.css
+++ b/css/pjw.css
@@ -443,9 +443,13 @@ article#course-main {
   font-size: 18px;
 }
 
-.pjw-xk-footer > span {
+.pjw-xk-footer > span, .pjw-xk-footer > a {
   margin-right: 20px;
   color: rgba(0, 0, 0, .6);
+}
+
+.pjw-xk-footer > a:hover {
+  color: rgba(0, 0, 0, .87);
 }
 
 #pjw-captcha-config {
